SUBDIRS = scorched

UNIX_DIST = \
	porting

WIN_DIST = \
	XML/ascii.h                             \
	XML/asciitab.h                          \
	XML/expat.h                             \
	XML/expat_config.h                      \
	XML/iasciitab.h                         \
	XML/internal.h                          \
	XML/latin1tab.h                         \
	XML/nametab.h                           \
	XML/utf8tab.h                           \
	XML/xmlrole.h                           \
	XML/xmltok.h                            \
	XML/xmltok_impl.c                       \
	XML/xmltok_impl.h                       \
	XML/xmltok_ns.c                         \
	ode/collision_kernel.cpp                \
	ode/collision_kernel.h                  \
	ode/collision_space.cpp                 \
	ode/collision_space.h                   \
	ode/collision_std.cpp                   \
	ode/collision_std.h                     \
	ode/collision_transform.cpp             \
	ode/collision_transform.h               \
	ode/collision_util.cpp                  \
	ode/collision_util.h                    \
	ode/odecpp_old.h                        \
	ode/odecpp_old_collision.h              \
	ode/scrapbook.cpp                       \
	ode/stack.cpp                           \
	ode/timer.cpp                           \
	ode/timer.h                             

OTH_SUBDIRS = 	\
		skincreator


EXTRA_DIST = $(WIN_DIST) $(UNIX_DIST) $(OTH_SUBDIRS)
