## Process with automake to produce Makefile.in
                                                                                
bin_PROGRAMS = scorched3d

scorched3d_SOURCES = \
	../GLEXT/GLBitmap.cpp \
	../GLEXT/GLBitmap.h \
	../GLEXT/GLBitmapItterator.cpp \
	../GLEXT/GLBitmapItterator.h \
	../GLEXT/GLBitmapModifier.cpp \
	../GLEXT/GLBitmapModifier.h \
	../GLEXT/GLCamera.cpp \
	../GLEXT/GLCamera.h \
	../GLEXT/GLCameraFrustum.cpp \
	../GLEXT/GLCameraFrustum.h \
	../GLEXT/GLConsole.cpp \
	../GLEXT/GLConsole.h \
	../GLEXT/GLConsoleFileReader.cpp \
	../GLEXT/GLConsoleFileReader.h \
	../GLEXT/GLConsoleLines.cpp \
	../GLEXT/GLConsoleLines.h \
	../GLEXT/GLConsoleMethods.cpp \
	../GLEXT/GLConsoleMethods.h \
	../GLEXT/GLConsoleRule.cpp \
	../GLEXT/GLConsoleRule.h \
	../GLEXT/GLConsoleRuleFn.cpp \
	../GLEXT/GLConsoleRuleFn.h \
	../GLEXT/GLConsoleRuleFnIAdapter.cpp \
	../GLEXT/GLConsoleRuleFnIAdapter.h \
	../GLEXT/GLConsoleRuleMethod.cpp \
	../GLEXT/GLConsoleRuleMethod.h \
	../GLEXT/GLConsoleRuleMethodIAdapter.cpp \
	../GLEXT/GLConsoleRuleMethodIAdapter.h \
	../GLEXT/GLConsoleRules.cpp \
	../GLEXT/GLConsoleRules.h \
	../GLEXT/GLDynamicVertexArray.cpp \
	../GLEXT/GLDynamicVertexArray.h \
	../GLEXT/GLFont2d.cpp \
	../GLEXT/GLFont2d.h \
	../GLEXT/GLGif.cpp \
	../GLEXT/GLGif.h \
	../GLEXT/GLImage.cpp \
	../GLEXT/GLImage.h \
	../GLEXT/GLInfo.cpp \
	../GLEXT/GLInfo.h \
	../GLEXT/GLLenseFlare.cpp \
	../GLEXT/GLLenseFlare.h \
	../GLEXT/GLLuminance.cpp \
	../GLEXT/GLLuminance.h \
	../GLEXT/GLMenu.cpp \
	../GLEXT/GLMenu.h \
	../GLEXT/GLMenuEntry.cpp \
	../GLEXT/GLMenuEntry.h \
	../GLEXT/GLMenuI.cpp \
	../GLEXT/GLMenuI.h \
	../GLEXT/GLState.cpp \
	../GLEXT/GLState.h \
	../GLEXT/GLStateExtension.cpp \
	../GLEXT/GLStateExtension.h \
	../GLEXT/GLTexture.cpp \
	../GLEXT/GLTexture.h \
	../GLEXT/GLTextureBase.cpp \
	../GLEXT/GLTextureBase.h \
	../GLEXT/GLTextureCubeMap.cpp \
	../GLEXT/GLTextureCubeMap.h \
	../GLEXT/GLTextureSet.cpp \
	../GLEXT/GLTextureSet.h \
	../GLEXT/GLVertexArray.cpp \
	../GLEXT/GLVertexArray.h \
	../GLEXT/GLVertexSet.cpp \
	../GLEXT/GLVertexSet.h \
	../GLEXT/GLVertexSetGroup.cpp \
	../GLEXT/GLVertexSetGroup.h \
	../GLEXT/GLViewPort.cpp \
	../GLEXT/GLViewPort.h \
	../GLW/GLWBitmap.cpp \
	../GLW/GLWBitmap.h \
	../GLW/GLWButton.cpp \
	../GLW/GLWButton.h \
	../GLW/GLWCheckBox.cpp \
	../GLW/GLWCheckBox.h \
	../GLW/GLWCheckBoxText.cpp \
	../GLW/GLWCheckBoxText.h \
	../GLW/GLWDropDown.cpp \
	../GLW/GLWDropDown.h \
	../GLW/GLWFileView.cpp \
	../GLW/GLWFileView.h \
	../GLW/GLWFlag.cpp \
	../GLW/GLWFlag.h \
	../GLW/GLWFont.cpp \
	../GLW/GLWFont.h \
	../GLW/GLWIcon.cpp \
	../GLW/GLWIcon.h \
	../GLW/GLWImageList.cpp \
	../GLW/GLWImageList.h \
	../GLW/GLWLabel.cpp \
	../GLW/GLWLabel.h \
	../GLW/GLWListView.cpp \
	../GLW/GLWListView.h \
	../GLW/GLWLoggerView.cpp \
	../GLW/GLWLoggerView.h \
	../GLW/GLWPanel.cpp \
	../GLW/GLWPanel.h \
	../GLW/GLWPlanView.cpp \
	../GLW/GLWPlanView.h \
	../GLW/GLWProgress.cpp \
	../GLW/GLWProgress.h \
	../GLW/GLWPushButton.cpp \
	../GLW/GLWPushButton.h \
	../GLW/GLWScorchedInfo.cpp \
	../GLW/GLWScorchedInfo.h \
	../GLW/GLWScrollButton.cpp \
	../GLW/GLWScrollButton.h \
	../GLW/GLWScrollPanel.cpp \
	../GLW/GLWScrollPanel.h \
	../GLW/GLWScrollW.cpp \
	../GLW/GLWScrollW.h \
	../GLW/GLWSelector.cpp \
	../GLW/GLWSelector.h \
	../GLW/GLWSelectorPart.cpp \
	../GLW/GLWSelectorPart.h \
	../GLW/GLWSlider.cpp \
	../GLW/GLWSlider.h \
	../GLW/GLWSpinBox.cpp \
	../GLW/GLWSpinBox.h \
	../GLW/GLWTab.cpp \
	../GLW/GLWTab.h \
	../GLW/GLWTankFire.cpp \
	../GLW/GLWTankFire.h \
	../GLW/GLWTankModel.cpp \
	../GLW/GLWTankModel.h \
	../GLW/GLWTextBox.cpp \
	../GLW/GLWTextBox.h \
	../GLW/GLWTextButton.cpp \
	../GLW/GLWTextButton.h \
	../GLW/GLWToolTip.cpp \
	../GLW/GLWToolTip.h \
	../GLW/GLWTracker.cpp \
	../GLW/GLWTracker.h \
	../GLW/GLWTranslate.cpp \
	../GLW/GLWTranslate.h \
	../GLW/GLWWeaponModel.cpp \
	../GLW/GLWWeaponModel.h \
	../GLW/GLWWindView.cpp \
	../GLW/GLWWindView.h \
	../GLW/GLWWindow.cpp \
	../GLW/GLWWindow.h \
	../GLW/GLWWindowManager.cpp \
	../GLW/GLWWindowManager.h \
	../GLW/GLWWindowSkin.cpp \
	../GLW/GLWWindowSkin.h \
	../GLW/GLWWindowSkinManager.cpp \
	../GLW/GLWWindowSkinManager.h \
	../GLW/GLWidget.cpp \
	../GLW/GLWidget.h \
	../tankgraph/GLWTankTip.cpp \
	../tankgraph/GLWTankTip.h \
	../tankgraph/GLWTankViewer.cpp \
	../tankgraph/GLWTankViewer.h \
	../tankgraph/MissileMesh.cpp \
	../tankgraph/MissileMesh.h \
	../tankgraph/TankMenus.cpp \
	../tankgraph/TankMenus.h \
	../tankgraph/TankMesh.cpp \
	../tankgraph/TankMesh.h \
	../tankgraph/TankModel.cpp \
	../tankgraph/TankModel.h \
	../tankgraph/TankModelRenderer.cpp \
	../tankgraph/TankModelRenderer.h \
	../tankgraph/TankModelStore.cpp \
	../tankgraph/TankModelStore.h \
	../tankgraph/TankParticleRenderer.cpp \
	../tankgraph/TankParticleRenderer.h \
	../tankgraph/TankRenderer.cpp \
	../tankgraph/TankRenderer.h \
	../tankgraph/TracerStore.cpp \
	../tankgraph/TracerStore.h \
	../common/ARGParser.cpp \
	../common/ARGParser.h \
	../common/Clock.cpp \
	../common/Clock.h \
	../common/Defines.cpp \
	../common/Defines.h \
	../common/Display.cpp \
	../common/Display.h \
	../common/FileLines.cpp \
	../common/FileLines.h \
	../common/FileList.cpp \
	../common/FileList.h \
	../common/FileLogger.cpp \
	../common/FileLogger.h \
	../common/Gamma.cpp \
	../common/Gamma.h \
	../common/KeyStateTranslate.h \
	../common/KeyTranslate.h \
	../common/Keyboard.cpp \
	../common/Keyboard.h \
	../common/KeyboardHistory.h \
	../common/KeyboardKey.cpp \
	../common/KeyboardKey.h \
	../common/Line.cpp \
	../common/Line.h \
	../common/Logger.cpp \
	../common/Logger.h \
	../common/LoggerI.cpp \
	../common/LoggerI.h \
	../common/Mouse.cpp \
	../common/Mouse.h \
	../common/OptionEntry.cpp \
	../common/OptionEntry.h \
	../common/OptionsDisplay.cpp \
	../common/OptionsDisplay.h \
	../common/OptionsGame.cpp \
	../common/OptionsGame.h \
	../common/OptionsHomeDir.cpp \
	../common/OptionsHomeDir.h \
	../common/OptionsParam.cpp \
	../common/OptionsParam.h \
	../common/OptionsTransient.cpp \
	../common/OptionsTransient.h \
	../common/ProgressCounter.cpp \
	../common/ProgressCounter.h \
	../common/RandomGenerator.cpp \
	../common/RandomGenerator.h \
	../common/Sound.cpp \
	../common/Sound.h \
	../common/SoundBuffer.cpp \
	../common/SoundBuffer.h \
	../common/SoundStore.cpp \
	../common/SoundStore.h \
	../common/StatsLogger.cpp \
	../common/StatsLogger.h \
	../common/StatsLoggerFile.cpp \
	../common/StatsLoggerFile.h \
	../common/StatsLoggerMySQL.cpp \
	../common/StatsLoggerMySQL.h \
	../common/Triangle.cpp \
	../common/Triangle.h \
	../common/Vector.cpp \
	../common/Vector.h \
	../common/VectorLib.cpp \
	../common/VectorLib.h \
	../3dsparse/ASEModelFactory.cpp \
	../3dsparse/ASEModelFactory.h \
	../3dsparse/Bone.cpp \
	../3dsparse/Bone.h \
	../3dsparse/Face.cpp \
	../3dsparse/Face.h \
	../3dsparse/MSModelFactory.cpp \
	../3dsparse/MSModelFactory.h \
	../3dsparse/Mesh.cpp \
	../3dsparse/Mesh.h \
	../3dsparse/MeshLOD.cpp \
	../3dsparse/MeshLOD.h \
	../3dsparse/MeshLODTri.cpp \
	../3dsparse/MeshLODTri.h \
	../3dsparse/MeshLODVector.cpp \
	../3dsparse/MeshLODVector.h \
	../3dsparse/Model.cpp \
	../3dsparse/Model.h \
	../3dsparse/ModelID.cpp \
	../3dsparse/ModelID.h \
	../3dsparse/ModelMaths.cpp \
	../3dsparse/ModelMaths.h \
	../3dsparse/ModelRenderer.cpp \
	../3dsparse/ModelRenderer.h \
	../3dsparse/ModelStore.cpp \
	../3dsparse/ModelStore.h \
	../3dsparse/Vertex.cpp \
	../3dsparse/Vertex.h \
	../3dsparse/aseFile.lex.cpp \
	../3dsparse/aseFile.tab.cpp \
	../3dsparse/aseFile.tab.cpp.h \
	../dialogs/AutoDefenseDialog.cpp \
	../dialogs/AutoDefenseDialog.h \
	../dialogs/BackdropDialog.cpp \
	../dialogs/BackdropDialog.h \
	../dialogs/BuyAccessoryDialog.cpp \
	../dialogs/BuyAccessoryDialog.h \
	../dialogs/CameraDialog.cpp \
	../dialogs/CameraDialog.h \
	../dialogs/ConnectDialog.cpp \
	../dialogs/ConnectDialog.h \
	../dialogs/HUDDialog.cpp \
	../dialogs/HUDDialog.h \
	../dialogs/HelpButtonDialog.cpp \
	../dialogs/HelpButtonDialog.h \
	../dialogs/InventoryDialog.cpp \
	../dialogs/InventoryDialog.h \
	../dialogs/KibitzingDialog.cpp \
	../dialogs/KibitzingDialog.h \
	../dialogs/LogDialog.cpp \
	../dialogs/LogDialog.h \
	../dialogs/MainMenuDialog.cpp \
	../dialogs/MainMenuDialog.h \
	../dialogs/PlayerDialog.cpp \
	../dialogs/PlayerDialog.h \
	../dialogs/ProgressDialog.cpp \
	../dialogs/ProgressDialog.h \
	../dialogs/QuitDialog.cpp \
	../dialogs/QuitDialog.h \
	../dialogs/ResignDialog.cpp \
	../dialogs/ResignDialog.h \
	../dialogs/RulesDialog.cpp \
	../dialogs/RulesDialog.h \
	../dialogs/SaveDialog.cpp \
	../dialogs/SaveDialog.h \
	../dialogs/ScoreDialog.cpp \
	../dialogs/ScoreDialog.h \
	../dialogs/SkipDialog.cpp \
	../dialogs/SkipDialog.h \
	../dialogs/TalkDialog.cpp \
	../dialogs/TalkDialog.h \
	../dialogs/TalkSettingsDialog.cpp \
	../dialogs/TalkSettingsDialog.h \
	../engine/Action.cpp \
	../engine/Action.h \
	../engine/ActionBuffer.cpp \
	../engine/ActionBuffer.h \
	../engine/ActionController.cpp \
	../engine/ActionController.h \
	../engine/ActionMeta.cpp \
	../engine/ActionMeta.h \
	../engine/EventContainer.cpp \
	../engine/EventContainer.h \
	../engine/FrameTimer.cpp \
	../engine/FrameTimer.h \
	../engine/GameState.cpp \
	../engine/GameState.h \
	../engine/GameStateI.cpp \
	../engine/GameStateI.h \
	../engine/GameStateStimulusI.cpp \
	../engine/GameStateStimulusI.h \
	../engine/MainLoop.cpp \
	../engine/MainLoop.h \
	../engine/MainLoopI.cpp \
	../engine/MainLoopI.h \
	../engine/MetaClass.cpp \
	../engine/MetaClass.h \
	../engine/ModFileEntry.cpp \
	../engine/ModFileEntry.h \
	../engine/ModFiles.cpp \
	../engine/ModFiles.h \
	../engine/Particle.cpp \
	../engine/Particle.h \
	../engine/ParticleEmitter.cpp \
	../engine/ParticleEmitter.h \
	../engine/ParticleEngine.cpp \
	../engine/ParticleEngine.h \
	../engine/ParticleRenderer.cpp \
	../engine/ParticleRenderer.h \
	../engine/PhysicsEngine.cpp \
	../engine/PhysicsEngine.h \
	../engine/PhysicsParticle.cpp \
	../engine/PhysicsParticle.h \
	../engine/PhysicsParticleObject.cpp \
	../engine/PhysicsParticleObject.h \
	../engine/ScorchedCollisionHandler.cpp \
	../engine/ScorchedCollisionHandler.h \
	../engine/ScorchedCollisionIds.cpp \
	../engine/ScorchedCollisionIds.h \
	../engine/ScorchedContext.cpp \
	../engine/ScorchedContext.h \
	../engine/ViewPoints.cpp \
	../engine/ViewPoints.h \
	../landscape/CloudSim.cpp \
	../landscape/CloudSim.h \
	../landscape/DeformLandscape.cpp \
	../landscape/DeformLandscape.h \
	../landscape/DeformTextures.cpp \
	../landscape/DeformTextures.h \
	../landscape/HeightMap.cpp \
	../landscape/HeightMap.h \
	../landscape/HeightMapCollision.cpp \
	../landscape/HeightMapCollision.h \
	../landscape/HeightMapLoader.cpp \
	../landscape/HeightMapLoader.h \
	../landscape/HeightMapModifier.cpp \
	../landscape/HeightMapModifier.h \
	../landscape/HeightMapRenderer.cpp \
	../landscape/HeightMapRenderer.h \
	../landscape/Hemisphere.cpp \
	../landscape/Hemisphere.h \
	../landscape/InfoMap.cpp \
	../landscape/InfoMap.h \
	../landscape/Landscape.cpp \
	../landscape/Landscape.h \
	../landscape/LandscapeDefinition.cpp \
	../landscape/LandscapeDefinition.h \
	../landscape/LandscapeDefinitions.cpp \
	../landscape/LandscapeDefinitions.h \
	../landscape/LandscapeDefn.cpp \
	../landscape/LandscapeDefn.h \
	../landscape/LandscapeMaps.cpp \
	../landscape/LandscapeMaps.h \
	../landscape/LandscapeObjects.cpp \
	../landscape/LandscapeObjects.h \
	../landscape/LandscapeObjectsEntry.cpp \
	../landscape/LandscapeObjectsEntry.h \
	../landscape/LandscapeObjectsEntryModel.cpp \
	../landscape/LandscapeObjectsEntryModel.h \
	../landscape/LandscapeObjectsEntryTree.cpp \
	../landscape/LandscapeObjectsEntryTree.h \
	../landscape/LandscapeObjectsPlacement.cpp \
	../landscape/LandscapeObjectsPlacement.h \
	../landscape/LandscapePlace.cpp \
	../landscape/LandscapePlace.h \
	../landscape/LandscapePoints.cpp \
	../landscape/LandscapePoints.h \
	../landscape/LandscapeTex.cpp \
	../landscape/LandscapeTex.h \
	../landscape/MapPoints.cpp \
	../landscape/MapPoints.h \
	../landscape/MovementMap.cpp \
	../landscape/MovementMap.h \
	../landscape/NapalmMap.cpp \
	../landscape/NapalmMap.h \
	../landscape/Patch.cpp \
	../landscape/Patch.h \
	../landscape/PatchGrid.cpp \
	../landscape/PatchGrid.h \
	../landscape/PatchSide.cpp \
	../landscape/PatchSide.h \
	../landscape/ShadowMap.cpp \
	../landscape/ShadowMap.h \
	../landscape/Sky.cpp \
	../landscape/Sky.h \
	../landscape/SkyDome.cpp \
	../landscape/SkyDome.h \
	../landscape/SkyRoof.cpp \
	../landscape/SkyRoof.h \
	../landscape/SkyRoofCollision.cpp \
	../landscape/SkyRoofCollision.h \
	../landscape/Smoke.cpp \
	../landscape/Smoke.h \
	../landscape/Sun.cpp \
	../landscape/Sun.h \
	../landscape/Surround.cpp \
	../landscape/Surround.h \
	../landscape/SurroundDefault.cpp \
	../landscape/SurroundDefault.h \
	../landscape/SurroundLandscape.cpp \
	../landscape/SurroundLandscape.h \
	../landscape/TriNode.cpp \
	../landscape/TriNode.h \
	../landscape/TriNodePool.cpp \
	../landscape/TriNodePool.h \
	../landscape/Variance.cpp \
	../landscape/Variance.h \
	../landscape/Wall.cpp \
	../landscape/Wall.h \
	../landscape/Water.cpp \
	../landscape/Water.h \
	../landscape/WaterMap.cpp \
	../landscape/WaterMap.h \
	../landscape/WaterMapModifier.cpp \
	../landscape/WaterMapModifier.h \
	../landscape/WaterMapPoints.cpp \
	../landscape/WaterMapPoints.h \
	../landscape/WaterMapSurround.cpp \
	../landscape/WaterMapSurround.h \
	../landscape/WaterWaves.cpp \
	../landscape/WaterWaves.h \
	../weapons/Accessory.cpp \
	../weapons/Accessory.h \
	../weapons/AccessoryPart.cpp \
	../weapons/AccessoryPart.h \
	../weapons/AccessoryStore.cpp \
	../weapons/AccessoryStore.h \
	../weapons/AutoDefense.cpp \
	../weapons/AutoDefense.h \
	../weapons/Battery.cpp \
	../weapons/Battery.h \
	../weapons/Economy.cpp \
	../weapons/Economy.h \
	../weapons/EconomyFreeMarket.cpp \
	../weapons/EconomyFreeMarket.h \
	../weapons/EconomyNone.cpp \
	../weapons/EconomyNone.h \
	../weapons/EconomyStore.cpp \
	../weapons/EconomyStore.h \
	../weapons/Fuel.cpp \
	../weapons/Fuel.h \
	../weapons/Parachute.cpp \
	../weapons/Parachute.h \
	../weapons/Shield.cpp \
	../weapons/Shield.h \
	../weapons/ShieldMag.cpp \
	../weapons/ShieldMag.h \
	../weapons/ShieldReflective.cpp \
	../weapons/ShieldReflective.h \
	../weapons/Weapon.cpp \
	../weapons/Weapon.h \
	../weapons/WeaponAimedOver.cpp \
	../weapons/WeaponAimedOver.h \
	../weapons/WeaponAimedUnder.cpp \
	../weapons/WeaponAimedUnder.h \
	../weapons/WeaponAnimation.cpp \
	../weapons/WeaponAnimation.h \
	../weapons/WeaponDelay.cpp \
	../weapons/WeaponDelay.h \
	../weapons/WeaponExplosion.cpp \
	../weapons/WeaponExplosion.h \
	../weapons/WeaponLaser.cpp \
	../weapons/WeaponLaser.h \
	../weapons/WeaponLeapFrog.cpp \
	../weapons/WeaponLeapFrog.h \
	../weapons/WeaponLightning.cpp \
	../weapons/WeaponLightning.h \
	../weapons/WeaponMirv.cpp \
	../weapons/WeaponMirv.h \
	../weapons/WeaponMulti.cpp \
	../weapons/WeaponMulti.h \
	../weapons/WeaponMuzzle.cpp \
	../weapons/WeaponMuzzle.h \
	../weapons/WeaponNapalm.cpp \
	../weapons/WeaponNapalm.h \
	../weapons/WeaponNull.cpp \
	../weapons/WeaponNull.h \
	../weapons/WeaponProjectile.cpp \
	../weapons/WeaponProjectile.h \
	../weapons/WeaponRedirect.cpp \
	../weapons/WeaponRedirect.h \
	../weapons/WeaponReference.cpp \
	../weapons/WeaponReference.h \
	../weapons/WeaponRoller.cpp \
	../weapons/WeaponRoller.h \
	../weapons/WeaponSkyFlash.cpp \
	../weapons/WeaponSkyFlash.h \
	../weapons/WeaponSound.cpp \
	../weapons/WeaponSound.h \
	../weapons/WeaponTranslate.cpp \
	../weapons/WeaponTranslate.h \
	../weapons/WeaponVelocity.cpp \
	../weapons/WeaponVelocity.h \
	../coms/ComsActionsMessage.cpp \
	../coms/ComsActionsMessage.h \
	../coms/ComsAddPlayerMessage.cpp \
	../coms/ComsAddPlayerMessage.h \
	../coms/ComsAdminMessage.cpp \
	../coms/ComsAdminMessage.h \
	../coms/ComsBuyAccessoryMessage.cpp \
	../coms/ComsBuyAccessoryMessage.h \
	../coms/ComsConnectAcceptMessage.cpp \
	../coms/ComsConnectAcceptMessage.h \
	../coms/ComsConnectMessage.cpp \
	../coms/ComsConnectMessage.h \
	../coms/ComsDefenseMessage.cpp \
	../coms/ComsDefenseMessage.h \
	../coms/ComsFileAkMessage.cpp \
	../coms/ComsFileAkMessage.h \
	../coms/ComsFileMessage.cpp \
	../coms/ComsFileMessage.h \
	../coms/ComsGameStateMessage.cpp \
	../coms/ComsGameStateMessage.h \
	../coms/ComsGameStoppedMessage.cpp \
	../coms/ComsGameStoppedMessage.h \
	../coms/ComsHaveModFilesMessage.cpp \
	../coms/ComsHaveModFilesMessage.h \
	../coms/ComsKeepAliveMessage.cpp \
	../coms/ComsKeepAliveMessage.h \
	../coms/ComsLastChanceMessage.cpp \
	../coms/ComsLastChanceMessage.h \
	../coms/ComsLevelMessage.cpp \
	../coms/ComsLevelMessage.h \
	../coms/ComsMessage.cpp \
	../coms/ComsMessage.h \
	../coms/ComsMessageHandler.cpp \
	../coms/ComsMessageHandler.h \
	../coms/ComsMessageSender.cpp \
	../coms/ComsMessageSender.h \
	../coms/ComsNewGameMessage.cpp \
	../coms/ComsNewGameMessage.h \
	../coms/ComsNextRoundMessage.cpp \
	../coms/ComsNextRoundMessage.h \
	../coms/ComsPlayedMoveMessage.cpp \
	../coms/ComsPlayedMoveMessage.h \
	../coms/ComsPlayerAimMessage.cpp \
	../coms/ComsPlayerAimMessage.h \
	../coms/ComsPlayerReadyMessage.cpp \
	../coms/ComsPlayerReadyMessage.h \
	../coms/ComsPlayerStateMessage.cpp \
	../coms/ComsPlayerStateMessage.h \
	../coms/ComsPlayerStatusMessage.cpp \
	../coms/ComsPlayerStatusMessage.h \
	../coms/ComsRmPlayerMessage.cpp \
	../coms/ComsRmPlayerMessage.h \
	../coms/ComsScoreMessage.cpp \
	../coms/ComsScoreMessage.h \
	../coms/ComsStartGameMessage.cpp \
	../coms/ComsStartGameMessage.h \
	../coms/ComsTextMessage.cpp \
	../coms/ComsTextMessage.h \
	../coms/ComsTimerStartMessage.cpp \
	../coms/ComsTimerStartMessage.h \
	../coms/NetBuffer.cpp \
	../coms/NetBuffer.h \
	../coms/NetBufferUtil.cpp \
	../coms/NetBufferUtil.h \
	../coms/NetInterface.cpp \
	../coms/NetInterface.h \
	../coms/NetLoopBack.cpp \
	../coms/NetLoopBack.h \
	../coms/NetMessage.cpp \
	../coms/NetMessage.h \
	../coms/NetMessageHandler.cpp \
	../coms/NetMessageHandler.h \
	../coms/NetMessagePool.cpp \
	../coms/NetMessagePool.h \
	../coms/NetServer.cpp \
	../coms/NetServer.h \
	../coms/NetServerProtocol.cpp \
	../coms/NetServerProtocol.h \
	../coms/NetServerRead.cpp \
	../coms/NetServerRead.h \
	../ode/array.cpp \
	../ode/array.h \
	../ode/collision.h \
	../ode/collision_kernel.cpp \
	../ode/collision_kernel.h \
	../ode/collision_quadtreespace.cpp \
	../ode/collision_space.cpp \
	../ode/collision_space.h \
	../ode/collision_space_internal.h \
	../ode/collision_std.cpp \
	../ode/collision_std.h \
	../ode/collision_transform.cpp \
	../ode/collision_transform.h \
	../ode/collision_trimesh.h \
	../ode/collision_util.cpp \
	../ode/collision_util.h \
	../ode/common.h \
	../ode/compatibility.h \
	../ode/contact.h \
	../ode/error.cpp \
	../ode/error.h \
	../ode/export-dif.cpp \
	../ode/export-dif.h \
	../ode/fastdot.c \
	../ode/fastldlt.c \
	../ode/fastlsolve.c \
	../ode/fastltsolve.c \
	../ode/joint.cpp \
	../ode/joint.h \
	../ode/lcp.cpp \
	../ode/lcp.h \
	../ode/mass.cpp \
	../ode/mass.h \
	../ode/mat.cpp \
	../ode/mat.h \
	../ode/matrix.cpp \
	../ode/matrix.h \
	../ode/memory.cpp \
	../ode/memory.h \
	../ode/misc.cpp \
	../ode/misc.h \
	../ode/objects-internal.h \
	../ode/objects.h \
	../ode/obstack.cpp \
	../ode/obstack.h \
	../ode/ode.cpp \
	../ode/ode.h \
	../ode/odecpp.h \
	../ode/odecpp_collision.h \
	../ode/odecpp_old.h \
	../ode/odemath.cpp \
	../ode/odemath.h \
	../ode/quickstep.cpp \
	../ode/quickstep.h \
	../ode/rotation.cpp \
	../ode/rotation.h \
	../ode/step.cpp \
	../ode/step.h \
	../ode/stepfast.cpp \
	../ode/testing.cpp \
	../ode/testing.h \
	../ode/timer.cpp \
	../ode/timer.h \
	../ode/util.cpp \
	../ode/util.h \
	../XML/XMLFile.cpp \
	../XML/XMLFile.h \
	../XML/XMLParser.cpp \
	../XML/XMLParser.h \
	../XML/XMLStringBuffer.cpp \
	../XML/XMLStringBuffer.h \
	../XML/expat.h \
	../XML/expat_config.h \
	../XML/winconfig.h \
	../XML/xmlparse.c \
	../XML/xmlrole.c \
	../XML/xmlrole.h \
	../XML/xmltok.c \
	../XML/xmltok.h \
	../zlib/adler32.c \
	../zlib/compress.c \
	../zlib/crc32.c \
	../zlib/deflate.c \
	../zlib/deflate.h \
	../zlib/gzio.c \
	../zlib/infblock.c \
	../zlib/infblock.h \
	../zlib/infcodes.c \
	../zlib/infcodes.h \
	../zlib/inffast.c \
	../zlib/inffast.h \
	../zlib/inffixed.h \
	../zlib/inflate.c \
	../zlib/inftrees.c \
	../zlib/inftrees.h \
	../zlib/infutil.c \
	../zlib/infutil.h \
	../zlib/trees.c \
	../zlib/trees.h \
	../zlib/uncompr.c \
	../zlib/zconf.h \
	../zlib/zlib.h \
	../zlib/zutil.c \
	../zlib/zutil.h \
	../actions/ActionVector.cpp \
	../actions/ActionVector.h \
	../actions/Animation.cpp \
	../actions/Animation.h \
	../actions/CameraPositionAction.cpp \
	../actions/CameraPositionAction.h \
	../actions/Explosion.cpp \
	../actions/Explosion.h \
	../actions/Laser.cpp \
	../actions/Laser.h \
	../actions/Lightning.cpp \
	../actions/Lightning.h \
	../actions/Napalm.cpp \
	../actions/Napalm.h \
	../actions/ShieldHit.cpp \
	../actions/ShieldHit.h \
	../actions/ShotBounce.cpp \
	../actions/ShotBounce.h \
	../actions/ShotDelay.cpp \
	../actions/ShotDelay.h \
	../actions/ShotProjectile.cpp \
	../actions/ShotProjectile.h \
	../actions/ShowScore.cpp \
	../actions/ShowScore.h \
	../actions/SkyFlash.cpp \
	../actions/SkyFlash.h \
	../actions/SoundAction.cpp \
	../actions/SoundAction.h \
	../actions/SpriteProjectile.cpp \
	../actions/SpriteProjectile.h \
	../actions/TankDamage.cpp \
	../actions/TankDamage.h \
	../actions/TankDead.cpp \
	../actions/TankDead.h \
	../actions/TankFalling.cpp \
	../actions/TankFalling.h \
	../actions/TankFallingEnd.cpp \
	../actions/TankFallingEnd.h \
	../actions/TankFired.cpp \
	../actions/TankFired.h \
	../actions/TankMovement.cpp \
	../actions/TankMovement.h \
	../actions/TankMovementEnd.cpp \
	../actions/TankMovementEnd.h \
	../actions/TankResign.cpp \
	../actions/TankResign.h \
	../actions/TankSay.cpp \
	../actions/TankSay.h \
	../actions/TankScored.cpp \
	../actions/TankScored.h \
	../actions/WallHit.cpp \
	../actions/WallHit.h \
	../sprites/DebrisActionRenderer.cpp \
	../sprites/DebrisActionRenderer.h \
	../sprites/ExplosionLaserBeamRenderer.cpp \
	../sprites/ExplosionLaserBeamRenderer.h \
	../sprites/ExplosionNukeRenderer.cpp \
	../sprites/ExplosionNukeRenderer.h \
	../sprites/ExplosionTextures.cpp \
	../sprites/ExplosionTextures.h \
	../sprites/FlareActionRenderer.cpp \
	../sprites/FlareActionRenderer.h \
	../sprites/MetaActionRenderer.cpp \
	../sprites/MetaActionRenderer.h \
	../sprites/MissileActionRenderer.cpp \
	../sprites/MissileActionRenderer.h \
	../sprites/NapalmRenderer.cpp \
	../sprites/NapalmRenderer.h \
	../sprites/SmokeActionRenderer.cpp \
	../sprites/SmokeActionRenderer.h \
	../sprites/SphereActionRenderer.cpp \
	../sprites/SphereActionRenderer.h \
	../sprites/TalkRenderer.cpp \
	../sprites/TalkRenderer.h \
	../sprites/TankDeadRenderer.cpp \
	../sprites/TankDeadRenderer.h \
	../sprites/TextActionRenderer.cpp \
	../sprites/TextActionRenderer.h \
	../sprites/WallActionRenderer.cpp \
	../sprites/WallActionRenderer.h \
	CreateDialogs.cpp \
	DisplayDialog.cpp \
	DisplayDialog.h \
	HtmlHelpDialog.cpp \
	HtmlHelpDialog.h \
	KeyDialog.cpp \
	KeyDialog.h \
	ListDialog.cpp \
	ListDialog.h \
	MainDialog.cpp \
	MainDialog.h \
	NetDialog.cpp \
	NetDialog.h \
	ServerDialog.cpp \
	ServerDialog.h \
	ServerMsgDialog.cpp \
	ServerMsgDialog.h \
	ServerSDialog.cpp \
	ServerSDialog.h \
	SettingsDialog.cpp \
	SettingsDialog.h \
	SingleChoiceDialog.cpp \
	SingleChoiceDialog.h \
	SingleDialog.cpp \
	SingleDialog.h \
	SingleGames.cpp \
	SingleGames.h \
	SingleSDialog.cpp \
	SingleSDialog.h \
	main.cpp \
	../client/ClientActionsHandler.cpp \
	../client/ClientActionsHandler.h \
	../client/ClientAddPlayerHandler.cpp \
	../client/ClientAddPlayerHandler.h \
	../client/ClientAdmin.cpp \
	../client/ClientAdmin.h \
	../client/ClientBuyAccessoryHandler.cpp \
	../client/ClientBuyAccessoryHandler.h \
	../client/ClientConnectionAcceptHandler.cpp \
	../client/ClientConnectionAcceptHandler.h \
	../client/ClientDefenseHandler.cpp \
	../client/ClientDefenseHandler.h \
	../client/ClientDialog.cpp \
	../client/ClientDialog.h \
	../client/ClientFileHandler.cpp \
	../client/ClientFileHandler.h \
	../client/ClientGameStateHandler.cpp \
	../client/ClientGameStateHandler.h \
	../client/ClientGameStoppedHandler.cpp \
	../client/ClientGameStoppedHandler.h \
	../client/ClientKeepAliveSender.cpp \
	../client/ClientKeepAliveSender.h \
	../client/ClientLastChanceHandler.cpp \
	../client/ClientLastChanceHandler.h \
	../client/ClientLoadPlayersState.cpp \
	../client/ClientLoadPlayersState.h \
	../client/ClientMain.cpp \
	../client/ClientMain.h \
	../client/ClientMessageHandler.cpp \
	../client/ClientMessageHandler.h \
	../client/ClientNewGameHandler.cpp \
	../client/ClientNewGameHandler.h \
	../client/ClientNewGameState.cpp \
	../client/ClientNewGameState.h \
	../client/ClientNextRoundHandler.cpp \
	../client/ClientNextRoundHandler.h \
	../client/ClientPlayerAimHandler.cpp \
	../client/ClientPlayerAimHandler.h \
	../client/ClientPlayerStatusHandler.cpp \
	../client/ClientPlayerStatusHandler.h \
	../client/ClientReadyState.cpp \
	../client/ClientReadyState.h \
	../client/ClientRmPlayerHandler.cpp \
	../client/ClientRmPlayerHandler.h \
	../client/ClientSave.cpp \
	../client/ClientSave.h \
	../client/ClientScoreHandler.cpp \
	../client/ClientScoreHandler.h \
	../client/ClientShotState.cpp \
	../client/ClientShotState.h \
	../client/ClientStartGameHandler.cpp \
	../client/ClientStartGameHandler.h \
	../client/ClientStartTimerHandler.cpp \
	../client/ClientStartTimerHandler.h \
	../client/ClientState.cpp \
	../client/ClientState.h \
	../client/ClientTextHandler.cpp \
	../client/ClientTextHandler.h \
	../client/ClientWaitState.cpp \
	../client/ClientWaitState.h \
	../client/GLSetup.cpp \
	../client/GLSetup.h \
	../client/Main2DCamera.cpp \
	../client/Main2DCamera.h \
	../client/MainCamera.cpp \
	../client/MainCamera.h \
	../client/MessageDisplay.cpp \
	../client/MessageDisplay.h \
	../client/ScorchedClient.cpp \
	../client/ScorchedClient.h \
	../client/ServerBrowser.cpp \
	../client/ServerBrowser.h \
	../client/ServerBrowserRefresh.cpp \
	../client/ServerBrowserRefresh.h \
	../client/ServerBrowserServerList.cpp \
	../client/ServerBrowserServerList.h \
	../client/ShotCountDown.cpp \
	../client/ShotCountDown.h \
	../client/SoftwareMouse.cpp \
	../client/SoftwareMouse.h \
	../client/SpeedChange.cpp \
	../client/SpeedChange.h \
	../client/TargetCamera.cpp \
	../client/TargetCamera.h \
	../client/UniqueIdStore.cpp \
	../client/UniqueIdStore.h \
	../client/WindowSetup.cpp \
	../client/WindowSetup.h \
	../server/ScorchedServer.cpp \
	../server/ScorchedServer.h \
	../server/ServerAddPlayerHandler.cpp \
	../server/ServerAddPlayerHandler.h \
	../server/ServerAdminHandler.cpp \
	../server/ServerAdminHandler.h \
	../server/ServerBanned.cpp \
	../server/ServerBanned.h \
	../server/ServerBrowserInfo.cpp \
	../server/ServerBrowserInfo.h \
	../server/ServerBuyAccessoryHandler.cpp \
	../server/ServerBuyAccessoryHandler.h \
	../server/ServerCheckForWinnersState.cpp \
	../server/ServerCheckForWinnersState.h \
	../server/ServerCommon.cpp \
	../server/ServerCommon.h \
	../server/ServerConnectHandler.cpp \
	../server/ServerConnectHandler.h \
	../server/ServerDefenseHandler.cpp \
	../server/ServerDefenseHandler.h \
	../server/ServerFileAkHandler.cpp \
	../server/ServerFileAkHandler.h \
	../server/ServerFileServer.cpp \
	../server/ServerFileServer.h \
	../server/ServerHaveModFilesHandler.cpp \
	../server/ServerHaveModFilesHandler.h \
	../server/ServerKeepAliveHandler.cpp \
	../server/ServerKeepAliveHandler.h \
	../server/ServerMain.cpp \
	../server/ServerMain.h \
	../server/ServerMessageHandler.cpp \
	../server/ServerMessageHandler.h \
	../server/ServerNewGameState.cpp \
	../server/ServerNewGameState.h \
	../server/ServerNextRoundState.cpp \
	../server/ServerNextRoundState.h \
	../server/ServerNextShotState.cpp \
	../server/ServerNextShotState.h \
	../server/ServerNextTurnState.cpp \
	../server/ServerNextTurnState.h \
	../server/ServerPlayedMoveHandler.cpp \
	../server/ServerPlayedMoveHandler.h \
	../server/ServerPlayerAimHandler.cpp \
	../server/ServerPlayerAimHandler.h \
	../server/ServerPlayerReadyHandler.cpp \
	../server/ServerPlayerReadyHandler.h \
	../server/ServerPlayingState.cpp \
	../server/ServerPlayingState.h \
	../server/ServerReadyState.cpp \
	../server/ServerReadyState.h \
	../server/ServerRegistration.cpp \
	../server/ServerRegistration.h \
	../server/ServerResetState.cpp \
	../server/ServerResetState.h \
	../server/ServerScoreState.cpp \
	../server/ServerScoreState.h \
	../server/ServerShotHolder.cpp \
	../server/ServerShotHolder.h \
	../server/ServerShotState.cpp \
	../server/ServerShotState.h \
	../server/ServerStartingState.cpp \
	../server/ServerStartingState.h \
	../server/ServerState.cpp \
	../server/ServerState.h \
	../server/ServerStateTooFewPlayersState.cpp \
	../server/ServerStateTooFewPlayersState.h \
	../server/ServerTextHandler.cpp \
	../server/ServerTextHandler.h \
	../server/ServerTimedMessage.cpp \
	../server/ServerTimedMessage.h \
	../server/ServerTooFewPlayersStimulus.cpp \
	../server/ServerTooFewPlayersStimulus.h \
	../server/TurnController.cpp \
	../server/TurnController.h \
	../tankai/TankAI.cpp \
	../tankai/TankAI.h \
	../tankai/TankAIAdder.cpp \
	../tankai/TankAIAdder.h \
	../tankai/TankAIComputer.cpp \
	../tankai/TankAIComputer.h \
	../tankai/TankAIComputerAim.cpp \
	../tankai/TankAIComputerAim.h \
	../tankai/TankAIComputerBuyer.cpp \
	../tankai/TankAIComputerBuyer.h \
	../tankai/TankAIComputerTarget.cpp \
	../tankai/TankAIComputerTarget.h \
	../tankai/TankAIHuman.cpp \
	../tankai/TankAIHuman.h \
	../tankai/TankAIHumanCtrl.cpp \
	../tankai/TankAIHumanCtrl.h \
	../tankai/TankAILogic.cpp \
	../tankai/TankAILogic.h \
	../tankai/TankAIStore.cpp \
	../tankai/TankAIStore.h \
	../tankai/TankAIStrings.cpp \
	../tankai/TankAIStrings.h \
	../boids/Boid.cpp \
	../boids/Boid.h \
	../boids/BoidVector.cpp \
	../boids/BoidVector.h \
	../boids/BoidWorld.cpp \
	../boids/BoidWorld.h \
	../boids/Obstacle.cpp \
	../boids/Obstacle.h \
	../boids/ScorchedBoids.cpp \
	../boids/ScorchedBoids.h \
	../boids/ScorchedBoidsObstacle.cpp \
	../boids/ScorchedBoidsObstacle.h \
	../boids/SimObject.h \
	../tank/Tank.cpp \
	../tank/Tank.h \
	../tank/TankAccessories.cpp \
	../tank/TankAccessories.h \
	../tank/TankAdmin.cpp \
	../tank/TankAdmin.h \
	../tank/TankAutoDefense.cpp \
	../tank/TankAutoDefense.h \
	../tank/TankAvatar.cpp \
	../tank/TankAvatar.h \
	../tank/TankBatteries.cpp \
	../tank/TankBatteries.h \
	../tank/TankColorGenerator.cpp \
	../tank/TankColorGenerator.h \
	../tank/TankContainer.cpp \
	../tank/TankContainer.h \
	../tank/TankController.cpp \
	../tank/TankController.h \
	../tank/TankDeadContainer.cpp \
	../tank/TankDeadContainer.h \
	../tank/TankFuel.cpp \
	../tank/TankFuel.h \
	../tank/TankLib.cpp \
	../tank/TankLib.h \
	../tank/TankMod.cpp \
	../tank/TankMod.h \
	../tank/TankModelId.cpp \
	../tank/TankModelId.h \
	../tank/TankParachutes.cpp \
	../tank/TankParachutes.h \
	../tank/TankPhysics.cpp \
	../tank/TankPhysics.h \
	../tank/TankScore.cpp \
	../tank/TankScore.h \
	../tank/TankShields.cpp \
	../tank/TankShields.h \
	../tank/TankSort.cpp \
	../tank/TankSort.h \
	../tank/TankState.cpp \
	../tank/TankState.h \
	../tank/TankWeapon.cpp \
	../tank/TankWeapon.h

INCLUDES = -I../porting -I.. 
